# thrift-logger

./: .gitignore  CMakeLists.txt  LoggerService.thrift  README.MD  thriftgen.sh
client/: LoggerClient.cpp  LoggerClient.py
gen-go/loggerservice/: GoUnusedProtection__.go  LoggerService-consts.go  LoggerService.go
gen-go/loggerservice/logger-remote/: logger-remote.go
server/: LoggerServer.cpp  LoggerServer.go  LoggerServer.py
